progress on admin control of orders

--- a/views/admin/products/add-product.ejs
+++ b/views/admin/products/add-product.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../../shared/includes/head") %>
+  <%- include("../../shared/includes/head", {title: 'Add a Product'}) %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <body>
     <%- include("../../shared/includes/header") %>
