--- a/views/customer/products/details.ejs
+++ b/views/customer/products/details.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../../shared/includes/head") %>
+  <%- include("../../shared/includes/head", {title: 'Product Details'}) %>
   <link rel="stylesheet" href="/styles/details.css" />
   <script src="/scripts/cartBadge.js" defer></script>
   <body>
