--- a/views/shared/errors/401.ejs
+++ b/views/shared/errors/401.ejs
@@ -1,4 +1,4 @@
-<%- include('../includes/head.ejs', { title: 'Error!' }) %>
+<%- include('../includes/head.ejs', { title: '401 Error' }) %>
 </head>
 <body>
   <%- include('../includes/header.ejs') %>
