--- a/views/shared/errors/500.ejs
+++ b/views/shared/errors/500.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%-include("../includes/head") %>
+  <%-include("../includes/head", {title: '500 Error'}) %>
   <body>
     <%-include("../includes/header") %>
     <main>
