--- a/views/admin/orders/all-orders.ejs
+++ b/views/admin/orders/all-orders.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../../shared/includes/head", {title: 'All Orders'}) %>
+  <%- include("../../shared/includes/head", {title: 'All Orders (Admin)'}) %>
+  <script src="/scripts/ordersControl.js" defer></script>
   <body>
     <header><%- include("../../shared/includes/header") %></header>
     <main>
