--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../../shared/includes/head") %>
+  <%- include("../../shared/includes/head", {title: 'All Products (Admin) '}) %>
   <link rel="stylesheet" href="/styles/forms.css" />
 
   <body>
