--- a/views/admin/products/product-detail.ejs
+++ b/views/admin/products/product-detail.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../../shared/includes/head") %>
+  <%- include("../../shared/includes/head", {title: 'Product Details (Admin)'})
+  %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <body>
     <%- include("../../shared/includes/header")%>
