--- a/views/customer/authorize/login.ejs
+++ b/views/customer/authorize/login.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../../shared/includes/head") %>
+  <%- include("../../shared/includes/head", {title: 'Login'}) %>
   <link rel="stylesheet" href="styles/forms.css" />
 
   <body>
