--- a/views/customer/authorize/signup.ejs
+++ b/views/customer/authorize/signup.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../../shared/includes/head") %>
+  <%- include("../../shared/includes/head", {title: 'Signup'}) %>
   <link rel="stylesheet" href="/styles/forms.css" />
   <body>
     <header><%- include("../../shared/includes/header") %></header>
