--- a/views/customer/cart/cart.ejs
+++ b/views/customer/cart/cart.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%-include("../../shared/includes/head") %>
+  <%-include("../../shared/includes/head", {title: 'Cart'}) %>
   <link rel="stylesheet" href="/styles/cart.css" />
   <script src="/scripts/cartControl.js" defer></script>
   <body>
