--- a/views/shared/errors/403.ejs
+++ b/views/shared/errors/403.ejs
@@ -1,4 +1,4 @@
-<%- include('../includes/head.ejs') %>
+<%- include('../includes/head.ejs', {title: '403 Error'}) %>
 </head>
 <body>
   <%- include('../includes/header.ejs') %>
